--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
 #nav-input-bar {
   display: flex;
   justify-content: space-between;
-  min-width: 1000px;
+  /* min-width: 1000px; */
 }
 
 #top-left-nav {
@@ -18,6 +18,9 @@ body {
   height: 33px;
   width: 100px;
   margin-right: 40px;
+}
+
+#google-logo-link {
   align-self: center;
 }
 
@@ -50,6 +53,7 @@ body {
 }
 .search-bar-icons {
   padding: 0 10px 0 10px;
+  cursor: pointer;
 }
 
 #top-right-nav {
@@ -59,6 +63,7 @@ body {
   align-self: center;
   padding: 20px 20px 0 0;
   width: 300px;
+  min-width: 300px;
 }
 
 #apps-icon {
@@ -72,5 +77,6 @@ body {
   background-color: #1973e8;
   color: #fff;
   padding: 10px 26px;
+  margin-right: 20px;
   border-radius: 5px;
 }
