--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,10 @@ a {
   padding-left: 10px;
 }
 
+#search-bar-container:hover {
+  box-shadow: 0 0 1px #9e9e9e;
+}
+
 #microphone-icon {
   width: 26px;
   height: 26px;
@@ -142,7 +146,7 @@ hr {
 }
 
 .result-link-container {
-  margin-bottom: 20px;
+  margin-bottom: 35px;
 }
 
 .link-address {
@@ -152,7 +156,8 @@ hr {
 
 /* Underline only the headers and not address link on top */
 .link-address:hover .result-header,
-.result-header:hover {
+.result-header:hover,
+.result-nav-links:hover {
   text-decoration: underline;
 }
 
@@ -206,4 +211,20 @@ hr {
   margin-top: 5px;
   margin-left: 5px;
   color: #1a0cab;
+}
+
+#featured-snippet {
+  border: 1px solid #dfe1e5;
+  border-radius: 10px;
+  padding: 19px 19px 19px 19px;
+}
+
+#snippet-description {
+  margin-top: 0;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.result-icons {
+  margin-right: 10px;
 }
