--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ a {
 }
 
 #search-bar-container:hover {
-  box-shadow: 0 0 1px #9e9e9e;
+  box-shadow: 0 0 2px #9e9e9e;
 }
 
 #microphone-icon {
@@ -53,10 +53,7 @@ a {
 }
 
 #search-icon {
-  filter: invert(49%) sepia(41%) saturate(4193%) hue-rotate(201deg)
-    brightness(98%) contrast(96%);
-  width: 18px;
-  height: 18px;
+  height: 25px;
 }
 .search-bar-icons {
   padding: 0 10px 0 10px;
@@ -74,8 +71,7 @@ a {
 }
 
 #apps-icon {
-  width: 18px;
-  height: 18px;
+  height: 28px;
   align-self: center;
   margin-right: 20px;
 }
@@ -108,21 +104,39 @@ a {
 #nav-link-container {
   display: flex;
   align-content: center;
+  width: 600px;
+}
+
+.link-container {
+  padding-right: 10px;
+  padding-left: 10px;
+  font-size: 15px;
+  color: #5f6368;
+}
+.link-container:hover {
+  cursor: pointer;
 }
 
 .nav-icons {
+  margin-bottom: -4px;
+
   margin-right: 5px;
+  height: 18px;
 }
 
 #settings-tools {
   margin-right: 40px;
 }
 
-#All-search-nav {
+#all-nav {
   border-bottom: 3px solid #1973e8;
-  padding-bottom: 10px;
+  padding-bottom: 14px;
+  padding-right: 15px;
+  padding-left: 10px;
 }
 hr {
+  height: 1px;
+
   margin: 0;
   opacity: 0.2;
 }
