--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: arial, sans-serif;
+  font-size: 15px;
 }
 
 a {
@@ -155,7 +156,7 @@ hr {
   display: flex;
   flex-direction: column;
   width: 700px;
-  margin-left: 175px;
+  margin-left: 200px;
   margin-top: 20px;
 }
 
@@ -265,4 +266,8 @@ hr {
   height: 18px;
   margin-bottom: -6px;
   padding: 0 10px;
+}
+#videos-header {
+  font-weight: normal;
+  font-size: 23px;
 }
