add extra-info for how to build website

--- a/styles/style.css
+++ b/styles/style.css
@@ -372,6 +372,10 @@ hr {
   /* flex-direction: row; */
 }
 
+.people-ask-row:hover {
+  cursor: pointer;
+}
+
 .people-ask-question {
   margin: 0;
   padding: 12px 0;
@@ -385,4 +389,30 @@ hr {
 
 .result-date {
   color: #5f6368;
+}
+
+.extra-info-rows {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #dfe1e5;
+  font-size: 15px;
+}
+.extra-info-rows:first-child {
+  margin-top: 10px;
+  border-top: 1px solid #dfe1e5;
+}
+
+.extra-info-questions {
+  margin: 12px 0;
+}
+.extra-info-rows:hover {
+  cursor: pointer;
+}
+
+#show-more-container {
+  display: flex;
+}
+
+#show-more-container p {
+  margin-left: 10px;
 }
