--- a/styles/style.css
+++ b/styles/style.css
@@ -416,3 +416,49 @@ hr {
 #show-more-container p {
   margin-left: 10px;
 }
+
+/* Related Search */
+.related-search {
+  border: 1px solid #dfe1e5;
+  border-radius: 10px;
+}
+
+.related-text {
+  padding: 10px 0 0 20px;
+  margin-bottom: 5px;
+  color: #5f6368;
+}
+
+.related-header {
+  margin-top: 0;
+  font-weight: normal;
+  font-size: 22px;
+}
+
+.view-more {
+  color: #5f6368;
+}
+
+.header-view-more {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.related-card-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.related-image-name {
+  margin-top: 0;
+}
+
+.related-card {
+  max-width: 77px;
+}
+
+.related-card h4 {
+  font-weight: normal;
+  color: #1a0cab;
+}
