--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,9 @@ a {
 #left-input-container {
   display: flex;
   width: 1200px;
-  padding: 20px 20px 0 20px;
+  padding: 25px 20px 0 35px;
+
+  /* padding: 20px 20px 0 20px; */
 }
 
 #google-logo {
@@ -38,10 +40,11 @@ a {
 
 #search-input {
   width: 670px;
-  height: 32px;
+  height: 37px;
   outline-style: none;
   border: none;
   padding-left: 10px;
+  font-size: 18px;
 }
 
 #search-bar-container:hover {
@@ -90,7 +93,7 @@ a {
 #main-nav-container {
   display: flex;
   justify-content: space-between;
-  width: 800px;
+  width: 820px;
   margin-top: 25px;
   margin-left: 165px;
 }
@@ -106,6 +109,7 @@ a {
   display: flex;
   align-content: center;
   width: 600px;
+  padding-left: 20px;
 }
 
 .link-container {
@@ -126,6 +130,7 @@ a {
 }
 
 #settings-tools {
+  display: flex;
   margin-right: 40px;
 }
 
@@ -143,7 +148,7 @@ hr {
 }
 
 #results-info {
-  margin-left: 175px;
+  margin-left: 200px;
   font-size: 15px;
   min-width: 1000px;
   margin-bottom: 0;
@@ -421,6 +426,11 @@ hr {
 .related-search {
   border: 1px solid #dfe1e5;
   border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+#last-related-search {
+  margin-bottom: 0;
 }
 
 .related-text {
@@ -461,4 +471,34 @@ hr {
 .related-card h4 {
   font-weight: normal;
   color: #1a0cab;
+}
+#related-search-feedback {
+  display: flex;
+  align-self: flex-end;
+  margin-top: 8px;
+  margin-right: 10px;
+  font-style: italic;
+  color: #5f6368;
+  font-size: 14px;
+}
+
+#related-pages-header {
+  color: #222;
+  padding-bottom: 20px;
+  text-decoration: none;
+}
+
+#related-phrase-container {
+  display: flex;
+  margin-bottom: 100px;
+  /* line-height: 30px; */
+}
+
+.related-phrase {
+  display: block;
+  padding: 10px 30px 0px 0px;
+  color: #1a0cab;
+}
+.related-phrase:hover {
+  text-decoration: underline;
 }
