--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  /* color: #609; */
+}
+
 #main-input-container {
   display: flex;
   justify-content: space-between;
@@ -68,8 +72,7 @@ a {
   display: flex;
   align-content: center;
   justify-content: flex-end;
-  align-self: center;
-  padding: 20px 20px 0 0;
+  align-self: flex-end;
   width: 300px;
   min-width: 300px;
 }
@@ -78,6 +81,12 @@ a {
   height: 28px;
   align-self: center;
   margin-right: 20px;
+  border-radius: 50%;
+  margin-top: -3px;
+}
+
+#apps-icon:hover {
+  background-color: #9e9e9e2f;
 }
 
 #sign-in-button {
@@ -86,6 +95,11 @@ a {
   padding: 10px 26px;
   margin-right: 20px;
   border-radius: 5px;
+  height: 40px;
+}
+
+#sign-in-button:hover {
+  background-color: #1973e8e3;
 }
 
 /* Main nav styles */
@@ -504,6 +518,7 @@ hr {
 
 #google-letters {
   margin-left: 190px;
+  margin-bottom: 30px;
 }
 
 #letters {
@@ -537,4 +552,62 @@ td a:hover {
 #next-symbol {
   width: 30px;
   margin-left: 20px;
+}
+
+#location-footer {
+  display: flex;
+  align-items: center;
+  background-color: rgb(242, 242, 242);
+  border-top: 1px solid #dfe1e5;
+  border-bottom: 1px solid #dfe1e5;
+}
+
+#country {
+  display: flex;
+  width: 300px;
+  justify-content: flex-end;
+}
+#country span {
+  font-weight: normal;
+  color: rgb(124, 124, 124);
+  padding-right: 10px;
+  font-size: 16px;
+  margin: 15px 0;
+}
+
+#circle {
+  background: #9e9e9e;
+  border-radius: 100%;
+  display: inline-block;
+  height: 10px;
+  margin: 6px 4px 9px 15px;
+  vertical-align: middle;
+  width: 10px;
+}
+
+.address-links {
+  color: rgb(124, 124, 124);
+}
+.address-links:hover {
+  color: black;
+}
+
+footer {
+  display: flex;
+  height: 48px;
+  background-color: rgb(242, 242, 242);
+  align-items: center;
+}
+
+#footer-container {
+  margin-left: 223px;
+}
+
+.footer-links {
+  font-size: 16px;
+  color: rgb(124, 124, 124);
+  padding-left: 27px;
+}
+.footer-links:hover {
+  color: black;
 }
