--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,6 @@ a:visited {
   display: flex;
   width: 1200px;
   padding: 25px 20px 0 35px;
-
-  /* padding: 20px 20px 0 20px; */
 }
 
 #google-logo {
@@ -82,6 +80,7 @@ a:visited {
   align-self: center;
   margin-right: 20px;
   border-radius: 50%;
+  padding: 10px;
   margin-top: -3px;
 }
 
@@ -89,11 +88,17 @@ a:visited {
   background-color: #9e9e9e2f;
 }
 
+#tools:hover {
+  box-shadow: 0 0 1px black;
+  background-color: #f2f2f2;
+  color: black;
+}
+
 #sign-in-button {
   background-color: #1973e8;
   color: #fff;
   padding: 10px 26px;
-  margin-right: 20px;
+  margin-right: 25px;
   border-radius: 5px;
   height: 40px;
 }
@@ -115,8 +120,7 @@ a:visited {
 .nav-links {
   color: #5f6368;
   font-size: 14.5px;
-  margin-left: 5px;
-  padding: 0 10px;
+  margin-right: 10px;
 }
 
 #nav-link-container {
@@ -296,7 +300,6 @@ hr {
 #videos-container {
   display: flex;
   position: relative;
-  /* border: 1px solid black; */
   width: 720px;
 }
 
@@ -385,10 +388,8 @@ hr {
 .people-ask-row {
   display: flex;
   justify-content: space-between;
-  /* margin: 0; */
   border-bottom: 1px solid #dfe1e5;
   padding: 0 15px;
-  /* flex-direction: row; */
 }
 
 .people-ask-row:hover {
