--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: arial, sans-serif;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 a {
@@ -133,7 +133,6 @@ a:visited {
 .link-container {
   padding-right: 10px;
   padding-left: 10px;
-  font-size: 15px;
   color: #5f6368;
 }
 .link-container:hover {
@@ -167,7 +166,6 @@ hr {
 
 #results-info {
   margin-left: 200px;
-  font-size: 15px;
   min-width: 1000px;
   margin-bottom: 0;
   color: #5f6368;
@@ -209,7 +207,7 @@ hr {
 }
 
 .result-header {
-  font-size: 23px;
+  font-size: 19px;
   font-weight: normal;
   color: #1a0cab;
   margin: 0;
@@ -260,7 +258,7 @@ hr {
 
 #snippet-description {
   margin-top: 0;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 25px;
 }
 
@@ -277,7 +275,7 @@ hr {
 
 .snippet-links {
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 12px;
   color: #5f6368;
 }
 
@@ -293,7 +291,7 @@ hr {
 #videos-intro {
   margin-top: 0;
   font-weight: normal;
-  font-size: 23px;
+  font-size: 20px;
 }
 
 /* VIDEOS */
@@ -321,7 +319,7 @@ hr {
   display: block;
   color: #1a0cab;
   padding: 14px;
-  font-size: 19px;
+  /* font-size: 19px; */
   line-height: 25px;
   font-weight: normal;
   margin: 0;
@@ -399,7 +397,7 @@ hr {
 .people-ask-question {
   margin: 0;
   padding: 12px 0;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 #down-expand-icon {
@@ -572,7 +570,6 @@ td a:hover {
   font-weight: normal;
   color: rgb(124, 124, 124);
   padding-right: 10px;
-  font-size: 16px;
   margin: 15px 0;
 }
 
@@ -605,7 +602,6 @@ footer {
 }
 
 .footer-links {
-  font-size: 16px;
   color: rgb(124, 124, 124);
   padding-left: 27px;
 }
