fixed typos and font-sizes

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,7 @@ a:visited {
 .link-container {
   padding-right: 10px;
   padding-left: 10px;
+  /* font-size: 14px; */
   color: #5f6368;
 }
 .link-container:hover {
@@ -166,6 +167,7 @@ hr {
 
 #results-info {
   margin-left: 200px;
+  /* font-size: 15px; */
   min-width: 1000px;
   margin-bottom: 0;
   color: #5f6368;
@@ -570,6 +572,7 @@ td a:hover {
   font-weight: normal;
   color: rgb(124, 124, 124);
   padding-right: 10px;
+  /* font-size: 16px; */
   margin: 15px 0;
 }
 
@@ -602,6 +605,7 @@ footer {
 }
 
 .footer-links {
+  /* font-size: 16px; */
   color: rgb(124, 124, 124);
   padding-left: 27px;
 }
